--- a/FoodStore/Site.Master
+++ b/FoodStore/Site.Master
@@ -21,22 +21,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="navList" runat="server" class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Home.aspx" runat="server" CssClass="nav-link">Home</asp:HyperLink>
+                        <asp:HyperLink ID="HomeLink" NavigateUrl="Home.aspx" runat="server" CssClass="nav-link">Home</asp:HyperLink>
                     </li>
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Foods.aspx" runat="server" CssClass="nav-link">Foods</asp:HyperLink>
+                        <asp:HyperLink ID="FoodsLink" NavigateUrl="Foods.aspx" runat="server" CssClass="nav-link">Foods</asp:HyperLink>
                     </li>
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Cart.aspx" runat="server" CssClass="nav-link">Cart</asp:HyperLink>
+                        <asp:HyperLink ID="CartLink" NavigateUrl="Cart.aspx" runat="server" CssClass="nav-link">Cart</asp:HyperLink>
                     </li>
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Login.aspx" runat="server" CssClass="nav-link">Login</asp:HyperLink>
+                        <asp:HyperLink ID="LoginLink" NavigateUrl="Login.aspx" runat="server" CssClass="nav-link">Login</asp:HyperLink>
                     </li>
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Admin.aspx" runat="server" CssClass="nav-link">Admin</asp:HyperLink>
+                        <asp:HyperLink ID="LogoutLink" NavigateUrl="Logout.aspx" runat="server" CssClass="nav-link" Visible="false">Logout</asp:HyperLink>
                     </li>
                     <li class="nav-item">
-                        <asp:HyperLink NavigateUrl="Register.aspx" runat="server" CssClass="nav-link">Register</asp:HyperLink>
+                        <asp:HyperLink ID="AdminLink" NavigateUrl="Admin.aspx" runat="server" CssClass="nav-link">Admin</asp:HyperLink>
+                    </li>
+                    <li class="nav-item">
+                        <asp:HyperLink ID="RegisterLink" NavigateUrl="Register.aspx" runat="server" CssClass="nav-link">Register</asp:HyperLink>
                     </li>
                 </ul>
             </div>
